--- a/index.html
+++ b/index.html
@@ -22,49 +22,49 @@
           </tr>
     </table>
     <hr size="3" noshade="">
-    <h3>Qualifications : </h3>
+    <h3>Skills :</h3>
     <table border="4" cellspacing="">
         <tr>
-         <td>iOS Developer ⭐️⭐️⭐️⭐️⭐️</td>
-         <td>Photography ⭐️⭐️⭐️</td>
+         <td>Front end developer ⭐️⭐️⭐️⭐️⭐️</td>
+         <td>C Language⭐️⭐️⭐️</td>
         </tr>
         <tr>
-         <td> web developer ⭐️⭐️⭐️⭐️</td>
-         <td> painting ⭐️⭐️</td>
+         <td> iOS developer ⭐️⭐️⭐️⭐️</td>
+         <td> Python ⭐️⭐️⭐️</td>
             
         </tr>
     </table>
     <hr size="3" noshade="">
-    <h3>Work Experience :</h3>
+    <h3>EDUCATION :</h3>
         <table border="2">
             <thead>
                 <tr>
                     <th>DATES</th>
-                    <TH>WORK</TH>
+                    <TH>INSTITUTE</TH>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>2020</td>
-                    <td>Developer at unity</td>
+                    <td>2011-2020</td>
+                    <td>KAINTAL SCHOOL PATIALA</td>
                 </tr>
                 <tr>
                     <td>2021-2022</td>
-                    <td> Researcher at microsoft</td>
+                    <td>DPS PATIALA</td>
                 </tr>
             </tbody>
         </table>
     <hr size="3" noshade="">
     <h3>Hobbies</h3>
         <ol type="1">
-            <li>love watching movies</li>
-            <li>listening to <a
-                    href="https://open.spotify.com/playlist/1NYHF1rfiyRwzgstuqIKSm?si=1165046d4a324666">music</a></li>
+            <li>Love playing Cricket</li>
+            <li>Music Lover</li>
+            <p>Check out my <a href="https://open.spotify.com/playlist/1NYHF1rfiyRwzgstuqIKSm?si=1165046d4a324666">Spotify</a></li> playlist</p>
 
         </ol>
         <table cellspacing="10">
             <tr>
-                <td><h4><u><a href="links.html">Check this out </a></u></h4></td>
+                <td><h4><u><a href="links.html">Additional links </a></u></h4></td>
                 <td><h4><u><a href="contact.html">Contact me </a></u></h4></td>
             </tr>
         </table>
