--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
 <body>
     <h3> links to visit once</h3>
     <ol type="I">
-        <li><a href="https://www.youtube.com/watch?v=A-r9sj7zHJ4">click here</a></li>
-        <li><a href="https://www.themintmagazine.com/who-will-save-the-world/">click here</a></li>
+        <li><a href="https://www.youtube.com/watch?v=A-r9sj7zHJ4">Beauty of Football</a></li>
+        <li><a href="https://www.themintmagazine.com/who-will-save-the-world/">Who will save the world ?</a></li>
     </ol>
 </body>
 </html>
